Added adding users to band functionality